<resources>
    <string name="app_name">F\u0026H</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="next">NEXT</string>
    <string name="skip">CANCEL</string>
    <string name="start">Finish</string>
    <string name="user_registered">User registered successfully</string>
    <string name="no_internet">User already exists</string>
    <string name="weight_failed">Weight field cannot be empty!</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="height_failed">Height field cannot be empty!</string>
    <string name="mail_failed">Mail is not valid!</string>
    <string name="password_failed">Password field cannot be empty!</string>
    <string name="username_failed">Username field cannot be empty!</string>
    <string name="bottom_password_failed">Bottom password doesn\'t match!</string>
    <string name="logout">Logout</string>
    <string name="diary">Diary</string>
    <string name="home">Home</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="diet">Diet</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="supper">Supper</string>
    <string name="fats">fats: </string>
    <string name="carbohydrates">carbohydrates: </string>
    <string name="proteins">proteins: </string>
    <string name="kcals">Kcals</string>
    <string name="add_a_product">Create a product</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="dateState">Date</string>
    <string name="search">Search</string>
    <string name="product_name">Product name:</string>
    <string name="grams">g</string>
    <string name="emptySearchEditText">This cannot be empty!</string>
    <string name="add_own_product">Add own product</string>
    <string name="fiber">Fibers</string>
    <string name="carbs_add">Carbohydrates</string>
    <string name="fat_add">Fats</string>
    <string name="saturated_fat">Saturated</string>
    <string name="polyunsaturated_fat">Polyunsaturated</string>
    <string name="monounsaturated_fat">Monounsaturated</string>
    <string name="sugar">Sugars</string>
    <string name="badFormat">Bad format, use for example: 12.5</string>
    <string name="go_back_to_diet_window">Go back to diet window</string>
    <string name="proteins_add">Proteins</string>
    <string name="go_back">Go back</string>
    <string name="added">Added</string>
    <string name="delete_question">Delete?</string>
    <string name="cancel">Cancel</string>
    <string name="add_question">add\?</string>
    <string name="please_wait">Please wait ...</string>
    <string name="are_you_sure_you_want_to_add_a_product_with_name">Are you sure you want to add a product with name:</string>
    <string name="continuation_of_add_product_adb">Are you sure you want to add a product with name:</string>
    <string name="continuation_of_add_product_adbb">\? If yes then write your portion here (1 portion = 100g). For example 1.5 will be 150 grams of food.</string>
    <string name="product_with_name">Product with name \"</string>
    <string name="has_been_added_to_the_database">\" has been added to the database.</string>
    <string name="are_you_sure_to_delate">Are you sure you want to delete a product with name:</string>
    <string name="registering_user">Registering user...</string>
    <string name="username2">Username:</string>
    <string name="e_mail">E-mail:</string>
    <string name="sex">Sex:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="weight_lose_per_week">Weight lose per week:</string>
    <string name="target_weight">Target weight:</string>
    <string name="informations">Informations</string>
    <string name="daily_calories">Daily calories</string>
    <string name="training">Training</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="number_of_reps">, number of reps:</string>
    <string name="number_of_series">Number of series:</string>
    <string name="delete_training_with_name">Are you sure you want to delete training with name:</string>
    <string name="delete_post_with_name">Are you sure you want to delete post with title:</string>
    <string name="add_a_training">Add an exercise</string>
    <string name="exercise_name">Exercise name:</string>
    <string name="number_of_reps2">Number of reps:</string>
    <string name="number_of_series2">Number of series:</string>
    <string name="exercise_with_name">Exercise with name:</string>
    <string name="title_activity_maps">Map</string>
    <string name="save_lap">Save</string>
    <string name="start2">Start</string>
    <string name="pause2">Pause</string>
    <string name="reset2">Reset</string>
    <string name="gyms">Gyms</string>
    <string name="showing_nearby_gyms">Showing nearby gyms</string>
    <string name="title_activity_maps2">Map</string>
    <string name="intro_message">Hello</string>
    <string name="open_activity">Search</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        Address: %2$s
        <br/>
        Phone: %3$s
        <br/>
        Website: %4$s
    ]]>
    </string>
    <string name="place_details_no_website">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        Address: %2$s
        <br/>
        Phone: %3$s
    ]]>
    </string>
    <string name="place_details_no_website_no_phone">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        Address: %2$s
    ]]>
    </string>
    <string name="place_details_no_phone">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        Address: %2$s
        <br/>
        Website: %3$s
    ]]>
    </string>
    <string name="add_gym">Add gym</string>
    <string name="not_avaiable">Google Play Services is not available:</string>
    <string name="add_a_gym_place">Add a gym place</string>
    <string name="steps_counter">Steps counter</string>
    <string name="add_product_to_the_database">Do you want to add a new product? If yes then write your portion here (1 portion = 100g). For example 1.5 will be 150 grams of food.</string>
    <string name="not_found">Product was not found. Do you want to add it?</string>
    <string name="steps_counter_not_avaiable">Steps counter is not avaiable on your device!</string>
    <string name="steps">Steps:</string>
    <string name="portion">Portion:</string>
    <string name="total_proteins">Total proteins:</string>
    <string name="total_carbs">, carbohydrates:</string>
    <string name="total_fats">, fats:</string>
    <string name="exit">Exit</string>
    <string name="value">Value</string>
    <string name="proteins_short">P</string>
    <string name="carbs_short">C</string>
    <string name="fats_short">F</string>
    <string name="add_new_product">Add new product</string>
    <string name="witamins">Vitamins</string>
    <string name="minerals">Minerals</string>
    <string name="vitaminA">Vitamin A</string>
    <string name="vitaminD">Vitamin D</string>
    <string name="vitaminE">Vitamin E</string>
    <string name="vitaminK">Vitamin K</string>
    <string name="vitaminB6">Vitamin B6</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="zinc">Zinc</string>
    <string name="copper">Copper</string>
    <string name="chrome">Chrome</string>
    <string name="del_short">Del</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="suplements">Suplements</string>
    <string name="settings">Settings</string>
    <string name="add_vitamins">Add vitamins</string>
    <string name="nazwa_wiczenia">Name</string>
    <string name="serii">Series</string>
    <string name="powt_rze">Num</string>
    <string name="usu">Delete</string>
    <string name="lastAdded">Last added</string>
    <string name="calories">Calories</string>
    <string name="favourites">Favourites</string>
    <string name="addMeal">Add a meal</string>
    <string name="createMeal">Create a meal</string>
    <string name="save">save</string>
    <string name="lunch">Lunch</string>
    <string name="portion_info">(portion)</string>
    <string name="meal_name">Meal</string>
    <string name="nameMeal">Please name this meal</string>
    <string name="add">Add</string>
    <string name="creatine">Kreatyna</string>
    <string name="bcaa">Bcaa</string>
    <string name="zma">ZMA</string>
    <string name="creatineDesc">Supplement supporting the increase of muscle mass. Its effectiveness and safety are confirmed by many studies.</string>
    <string name="bcaaDesc">Supplement, which strengthens the endurance of muscle tissue and inhibits its distribution. Its effects have been confirmed by many studies.</string>
    <string name="zmaDesc">A supplement consisting of magnesium, zinc and vitamin B6, it is used mainly to protect the body against intense exercise.</string>
    <string name="eggs">Eggs</string>
    <string name="chickenFilet">Chicken filet</string>
    <string name="oats">Oats</string>
    <string name="protein_bar">Protein bar</string>
</resources>
