<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_diary"
            android:title="@string/diary" />
        <item
            android:id="@+id/diet"
            android:icon="@drawable/ic_fork"
            android:title="@string/diet" />

        <item
            android:id="@+id/training"
            android:icon="@drawable/ic_barbell"
            android:title="@string/training" />

        <item
            android:id="@+id/user_info"
            android:icon="@drawable/ic_info"
            android:title="@string/informations" />


        <item
            android:id="@+id/suplementItem"
            android:icon="@drawable/ic_business"
            android:title="@string/suplements" />

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_door"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
