<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.LayoutPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name" />

        <EditText
            android:id="@+id/exercise_name_et"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_series2" />

        <EditText
            android:id="@+id/number_of_series_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_reps2" />

        <EditText
            android:id="@+id/number_of_reps_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:weightSum="2">

        <Button
            android:id="@+id/add_training_btnADD"
            android:layout_width="match_parent"
            style="@style/ButtonTheme"
            android:layout_weight="1"
            android:text="Dodaj ćwiczenie" />

        <Button
            android:id="@+id/go_trainings_btn"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/go_back" />
    </LinearLayout>
</RelativeLayout>